--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "css-loader": "^0.23.1"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
   }
