--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-draggable": "^2.1.2"
   }
 }
